<?xml version="1.0" encoding="utf-8"?>
<!--
    /*
     * Copyright (C) 2008 Google Inc.
     *
     * Licensed under the Apache License, Version 2.0 (the "License");
     * you may not use this file except in compliance with the License.
     * You may obtain a copy of the License at
     *
     *      http://www.apache.org/licenses/LICENSE-2.0
     *
     * Unless required by applicable law or agreed to in writing, software
     * distributed under the License is distributed on an "AS IS" BASIS,
     * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     * See the License for the specific language governing permissions and
     * limitations under the License.
     */
-->
<resources>

    <string name="ringdroid_app_name" translatable="false">Ringdroid</string>

    <!--
     Main / media select activity
     -->

    <string name="main_activity_label" translatable="false">@string/ringdroid_app_name</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <!--
     Edit activity
     -->

    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <!-- Progress dialog text for loading, recording, or saving... -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop" translatable="false">@string/progress_dialog_stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="save_button">Save</string>

    <!--
     Menu items
     -->

    <string name="menu_save" translatable="false">@string/save_button</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <!--
     Context menu items
     -->

    <string name="context_menu_edit" translatable="false">@string/edit_intent</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save" translatable="false">@string/save_button</string>
    <string name="file_save_button_cancel" translatable="false">@string/progress_dialog_cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="artist_name" translatable="false">@string/ringdroid_app_name</string>

    <!--
     Delete confirmation dialog
     -->

    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>

    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure?  This file was not created using Ringdroid!</string>

    <string name="delete_ok_button" translatable="false">@string/context_menu_delete</string>
    <string name="delete_cancel_button" translatable="false">@string/progress_dialog_cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <!--
     Choose Contact Activity
     -->

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <!--
     About
     -->

    <string name="about_title">About Ringdroid</string>
    <string name="about_text_html">
        <![CDATA[
            <b>Ringdroid</b><br><br>
            Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications.<br><br>

            <b>Tips:</b><br>
            • Copy audio files using USB<br>
            • Tap anywhere on the waveform to play<br>
            • Tap Start/End while playing to set markers<br><br>

            <b>Version: %s</b><br><br>

            <b>Developers:</b><br>
            Dominic Mazzoni<br>
            Nicolas Faralli<br>
            althafvly<br><br>

            <b>Graphics:</b> Joseph Wain<br>
            <b>Support:</b> Eugene Koh<br>
            <b>Enhancements:</b> Dan Klufas<br><br>

            Ringdroid is free software under Apache 2.0.<br>
            Source code: <a href="https://github.com/althafvly/ringdroid">github.com/althafvly/ringdroid</a>
        ]]>
    </string>

    <string name="require_contacts_permission">Please enable contacts permission to assign a ringtone.</string>
    <string name="required_mic_permission">Microphone permission required to record audio</string>
    <string name="required_system_modify_permission">Modify system settings permission is required to set ringtone</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="write_system_settings">Write System Settings</string>
    <string name="mic_permission">Microphone Permission</string>
    <string name="contacts_permission">Contacts Permission</string>
    <string name="start">Start</string>
    <string name="storage_permission_summary">Needed to save and access audio files (Recommended)\n\nRequires this or media audio permission for the app to read and write</string>
    <string name="write_system_settings_summary">Needed to set ringtones as system default</string>
    <string name="mic_permission_summary">Needed to record your own audio clips</string>
    <string name="contact_permission_summary">Needed to assign ringtones to your contacts</string>
    <string name="media_audio_permission">Media audio permission</string>
    <string name="media_audio_summary">Needed to read ringtone files from your smart phone \n\nRequires this or storage permission for the app to read and write</string>
    <string name="list_is_empty">No audio files found. Enable ‘Show all audio’ from the three-dot menu to view system audio files</string>

    <!-- Permission requirement dialog -->
    <string name="storage_permission_required_for_editor_fdroid">Storage or media audio permission is required for this app to work. All other permissions are optional.</string>
    <string name="storage_permission_required_for_editor_play">Media audio permission is required for this app to work. All other permissions are optional.</string>

    <string name="filename_with_suffix" translatable="false">%1$s %2$s</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>

</resources>
